core: adding new Project Name and changed everything to match new idea
