# src/application/handlers/mood_handler.py
@@ -2,47 +2,47 @@ from flask import (
     jsonify,
     request
 )
-from src.infrastructure.db.repositories.video_repository import VideoRepository
-from src.domain.entity.video import Video
+from src.infrastructure.db.repositories.mood_repository import MoodRepository
+from src.domain.entity.mood import Mood
 
 
-class VideoHandler:
+class MoodHandler:
     def __init__():
         pass
 
-    def handle_get_videos():
-        video_repository = VideoRepository()
-        videos = video_repository.get_all()
+    def handle_get_moods():
+        mood_repository = MoodRepository()
+        moods = mood_repository.get_all()
 
-        if videos is None:
+        if moods is None:
             return jsonify({
-                "error": "Videos not found"
+                "error": "Moods not found"
             }), 404
 
         output = []
 
-        for video in videos:
-            output.append(Video(video[0], video[1], video[2], video[3],
-                                video[4], video[5], video[6], video[7]).get_value())
+        for mood in moods:
+            output.append(Mood(mood[0], mood[1], mood[2], mood[3],
+                                mood[4], mood[5], mood[6], mood[7]).get_value())
 
         return jsonify(output), 200
 
-    def handle_get_video(video_id: str):
-        video_repository = VideoRepository()
-        output = video_repository.get_by_id(video_id)
-        video = Video(output[0], output[1], output[2], output[3],
+    def handle_get_mood(mood_id: str):
+        mood_repository = MoodRepository()
+        output = mood_repository.get_by_id(mood_id)
+        mood = Mood(output[0], output[1], output[2], output[3],
                       output[4], output[5], output[6], output[7])
 
-        if output is None or video is None:
+        if output is None or mood is None:
             return jsonify({
-                "error": "Video not found"
+                "error": "mood not found"
             }), 404
 
-        output = video.get_value()
+        output = mood.get_value()
 
         return jsonify(output), 200
 
-    def handle_create_video():
+    def handle_create_mood():
         data = request.get_json()
 
         if data is None:
@@ -51,17 +51,17 @@ class VideoHandler:
             }), 400
 
         try:
-            input = Video(None, data.get('title'), data.get('description'), data.get('url'),
+            input = Mood(None, data.get('title'), data.get('description'), data.get('url'),
                           data.get('duration'), data.get('thumbnail_url'), data.get('published_at'), data.get('channel_id'))
 
             output = input.get_value()
 
-            video_repository = VideoRepository()
-            result = video_repository.create(input)
+            mood_repository = MoodRepository()
+            result = mood_repository.create(input)
 
             if result is None:
                 return jsonify({
-                    "error": "video not created"
+                    "error": "mood not created"
                 }), 500
 
             output['id'] = result
@@ -73,7 +73,7 @@ class VideoHandler:
 
         return jsonify(output), 201
 
-    def handle_update_video(video_id: str):
+    def handle_update_mood(mood_id: str):
         data = request.get_json()
 
         if data is None:
@@ -82,19 +82,19 @@ class VideoHandler:
             }), 400
 
         try:
-            input = Video(None, data.get('title'), data.get('description'), data.get('url'),
+            input = Mood(None, data.get('title'), data.get('description'), data.get('url'),
                           data.get('duration'), data.get('thumbnail_url'), data.get('published_at'), data.get('channel_id'))
 
             output = input.get_value()
 
-            video_repository = VideoRepository()
-            result = video_repository.update(input, video_id)
+            mood_repository = MoodRepository()
+            result = mood_repository.update(input, mood_id)
 
-            output['id'] = video_id
+            output['id'] = mood_id
 
             if result is None:
                 return jsonify({
-                    "error": "video not updated"
+                    "error": "mood not updated"
                 }), 500
 
         except ValueError as e:
@@ -104,29 +104,29 @@ class VideoHandler:
 
         return jsonify(output), 200
 
-    def handle_delete_video(video_id: str):
-        if video_id is None:
+    def handle_delete_mood(mood_id: str):
+        if mood_id is None:
             return jsonify({
                 "error": "invalid data"
             }), 400
 
         try:
-            video_id = int(video_id)
+            mood_id = int(mood_id)
 
-            video_repository = VideoRepository()
+            mood_repository = MoodRepository()
 
-            video = video_repository.get_by_id(video_id)
+            mood = mood_repository.get_by_id(mood_id)
 
-            if video is None:
+            if mood is None:
                 return jsonify({
-                    "error": "video not found"
+                    "error": "mood not found"
                 }), 404
 
-            result = video_repository.delete(video_id)
+            result = mood_repository.delete(mood_id)
 
             if result is None:
                 return jsonify({
-                    "error": "video not deleted"
+                    "error": "mood not deleted"
                 }), 500
 
         except ValueError as e:
@@ -135,5 +135,5 @@ class VideoHandler:
             }), 400
 
         return jsonify({
-            "message": "video deleted successfully"
+            "message": "mood deleted successfully"
         }), 200
